Fixed errors when creating files and directories